# art-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Agents.md  README.md  ToAgent.md  config.yaml  env_example  google-cloud  heart_test.html  main.py  pyproject.toml  requirements.txt
docs/development/: main.md  mode.md  schema_adaptation.md
examples/mm/: test_mm_mas.py
examples/notehelper/: test_notehelper.py
examples/tools/: reasoning_triggers.py
examples/utils/: input_processor_example.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  fabric.d.ts
output/wang_agent_test/: state_snapshot_initial.json  state_snapshot_node_analyze_weights_node_3.json  state_snapshot_node_fine_tune_node_6.json  state_snapshot_node_fine_tune_node_8.json  state_snapshot_node_generate_image_node_2.json  state_snapshot_node_generate_svg_stage_node_10.json  state_snapshot_node_generate_svg_stage_node_12.json  state_snapshot_node_generate_svg_stage_node_14.json  state_snapshot_node_generate_svg_stage_node_16.json  state_snapshot_node_generate_svg_stage_node_4.json  state_snapshot_node_reflect_node_11.json  state_snapshot_node_reflect_node_13.json  state_snapshot_node_reflect_node_15.json  state_snapshot_node_reflect_node_17.json  state_snapshot_node_reflect_node_5.json  state_snapshot_node_reflect_node_7.json  state_snapshot_node_reflect_node_9.json  state_snapshot_node_think_node_1.json  test_log.json  validation_report.json
scripts/: config.yaml  run_mcp_servers.py
src/config/: model.py  (+2 more)
(+216 files in other folders)
